# mle-training1

./: Assignment3.1.ipynb  Dockerfile  README.md  code.py  env.yaml  env.yml  nonstandardcode.py  package.json  pyproject.toml  setup.py
docs/source/: conf.py
mlruns/0/: meta.yaml
src/mle_training1_raushanta/: ingest_data.py  score.py  train.py
tests/functional_tests/: test_installation.py  test_training.py
tests/unit_testing/: test_data_ingestion.py
