[project]
name = "mle_training1_raushanta"
version = "1.0"
authors = [
  { name="Raushan Kumar", email="raushan.kumar@tigeranalytics.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/raushanta/mle-training1"
"Bug Tracker" = "https://github.com/raushanta/mle-training1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"